--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Section 1 </h1>
+    <p1>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia at vel illo aliquam quia eligendi facilis perferendis quod et veniam, modi sint omnis aliquid maiores libero magnam veritatis, eaque totam.
+    </p1>
 </body>
 </html>
